# flitter-kinect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-lint.yml  release-package.yml
examples/: mesh.fl  monitor.fl
src/flitter_kinect/: __init__.py  mesh.pyx  shader.py
